--- a/src/app/shared/params/params.component.html
+++ b/src/app/shared/params/params.component.html
@@ -9,7 +9,12 @@
       >
         Clear
       </bio-option>
-      <bio-option [value]="platform.id" *ngFor="let platform of platforms; trackBy: trackById" [title]="platform.name">
+      <bio-option
+        [value]="platform.id"
+        *ngFor="let platform of platforms; trackBy: trackById"
+        [title]="platform.name"
+        (click)="platformChange.emit(platform)"
+      >
         {{ platform.name }}
       </bio-option>
     </bio-select>
