--- a/src/app/player/player-change-requests/player-change-requests-action-cell/player-change-requests-action-cell.component.html
+++ b/src/app/player/player-change-requests/player-change-requests-action-cell/player-change-requests-action-cell.component.html
@@ -5,7 +5,7 @@
   tooltip="Check requested changes"
   tooltipPosition="right"
   type="button"
-  [disabled]="loadingModal$ | async"
+  [disabled]="loadingModal"
   (click)="openModalChangeRequests()"
 >
   <icon small>sync_alt</icon>
