--- a/src/app/auth/change-password/change-password-confirm/change-password-confirm.component.html
+++ b/src/app/auth/change-password/change-password-confirm/change-password-confirm.component.html
@@ -1,4 +1,4 @@
-<form [controlGroup]="form" class="center-block-mobile" *ngIf="state$ | async as state" (groupSubmit)="onConfirm()">
+<form [controlGroup]="form" class="center-block-mobile" (groupSubmit)="onConfirm()">
   <bio-card>
     <h3 bioCardTitle>Change password - confirm</h3>
     <bio-card-content>
@@ -12,12 +12,12 @@
           bioInput
           placeholder="Password"
           controlName="oldPassword"
-          [type]="state.hideOldPassword ? 'password' : 'text'"
+          [type]="hideOldPassword ? 'password' : 'text'"
           autocomplete="password"
           #inputPassword
         />
-        <button suffix bioButton icon type="button" (click)="toggleHideOldPassword()">
-          <icon>{{ state.hideOldPassword ? 'visibility_off' : 'visibility' }}</icon>
+        <button suffix bioButton icon type="button" (click)="hideOldPassword = !hideOldPassword">
+          <icon>{{ hideOldPassword ? 'visibility_off' : 'visibility' }}</icon>
         </button>
         <errors>
           <error *error="'required'">Old password is required</error>
@@ -28,12 +28,12 @@
           bioInput
           placeholder="New password"
           controlName="newPassword"
-          [type]="state.hidePassword ? 'password' : 'text'"
+          [type]="hidePassword ? 'password' : 'text'"
           autocomplete="new-password"
           #inputPassword
         />
-        <button suffix bioButton icon type="button" (click)="toggleHidePassword()">
-          <icon>{{ state.hidePassword ? 'visibility_off' : 'visibility' }}</icon>
+        <button suffix bioButton icon type="button" (click)="hidePassword = !hidePassword">
+          <icon>{{ hidePassword ? 'visibility_off' : 'visibility' }}</icon>
         </button>
         <errors>
           <error *error="'required'">New password is required</error>
@@ -46,11 +46,11 @@
           bioInput
           placeholder="Confirm new password"
           controlName="confirmNewPassword"
-          [type]="state.hideConfirmPassword ? 'password' : 'text'"
+          [type]="hideConfirmPassword ? 'password' : 'text'"
           autocomplete="off"
         />
-        <button suffix bioButton icon type="button" (click)="toggleHideConfirmPassword()">
-          <icon>{{ state.hideConfirmPassword ? 'visibility_off' : 'visibility' }}</icon>
+        <button suffix bioButton icon type="button" (click)="hideConfirmPassword = !hideConfirmPassword">
+          <icon>{{ hideConfirmPassword ? 'visibility_off' : 'visibility' }}</icon>
         </button>
         <errors>
           <error *error="'required'">Confirm new password is required</error>
@@ -61,10 +61,10 @@
           <error *error="'siblingNotEquals'">New password is the same as the old password</error>
         </errors>
       </form-field>
-      <p class="text-danger" *ngIf="error$ | async as error">{{ error }}</p>
+      <p class="text-danger" *ngIf="error">{{ error }}</p>
     </bio-card-content>
     <bio-card-actions>
-      <button type="submit" bioButton primary [disabled]="form.invalid" [loading]="confirming$ | async">Confirm</button>
+      <button type="submit" bioButton primary [disabled]="form.invalid" [loading]="confirming">Confirm</button>
     </bio-card-actions>
   </bio-card>
 </form>
