- removed LocalState from SteamRegisterComponent

--- a/src/app/auth/auth-steam/steam-register/steam-register.component.html
+++ b/src/app/auth/auth-steam/steam-register/steam-register.component.html
@@ -1,14 +1,14 @@
-<form [controlGroup]="form" (groupSubmit)="submit()" *ngIf="state$ | async as state" class="center-container">
+<form [controlGroup]="form" (groupSubmit)="submit()" class="center-container">
   <bio-card class="center-block-mobile">
     <h3 bioCardTitle>Register Steam</h3>
     <bio-card-content>
-      <ng-container *ngIf="state.emailSent; else emailForm">
+      <ng-container *ngIf="emailSent; else emailForm">
         <p>Please confirm the code we sent to your e-mail</p>
         <bio-confirmation-code-input
           controlName="code"
           (focusoutLastItem)="submit()"
           label="Confirmation code"
-          [codeError]="confirmCodeError$ | async"
+          [codeError]="confirmCodeError"
         ></bio-confirmation-code-input>
       </ng-container>
 
@@ -24,8 +24,8 @@
       </ng-template>
     </bio-card-content>
     <bio-card-actions end>
-      <button bioButton primary type="submit" [disabled]="form.invalid" [loading]="state.loading">
-        {{ state.emailSent ? 'Send confirmation code' : 'Register' }}
+      <button bioButton primary type="submit" [disabled]="form.invalid" [loading]="loading">
+        {{ emailSent ? 'Send confirmation code' : 'Register' }}
       </button>
     </bio-card-actions>
   </bio-card>
