--- a/src/app/auth/change-password/change-password/change-password.component.html
+++ b/src/app/auth/change-password/change-password/change-password.component.html
@@ -1,7 +1,7 @@
-<bio-card *ngIf="state$ | async as state" class="center-block-mobile">
+<bio-card class="center-block-mobile">
   <h3 bioCardTitle>Change password</h3>
-  <bio-card-content [class.text-success]="state.sentEmail">
-    <ng-container *ngIf="state.sentEmail; else emailNotSent">
+  <bio-card-content [class.text-success]="sentEmail">
+    <ng-container *ngIf="sentEmail; else emailNotSent">
       <icon outlined>check_circle</icon>
       E-mail was sent successfully!
     </ng-container>
@@ -9,7 +9,7 @@
       To change you will need to follow the instructions that we will send to your e-mail.
     </ng-template>
   </bio-card-content>
-  <bio-card-actions *ngIf="!state.sentEmail">
-    <button bioButton primary type="button" (click)="sendEmail()" [loading]="state.sendingEmail">Send e-mail</button>
+  <bio-card-actions *ngIf="!sentEmail">
+    <button bioButton primary type="button" (click)="sendEmail()" [loading]="sendingEmail">Send e-mail</button>
   </bio-card-actions>
 </bio-card>
