- removed LocalState from ForgotPasswordComponent

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,12 +1,12 @@
 <form [controlGroup]="emailForm" (groupSubmit)="submit()" class="center-container">
-  <bio-card *ngLet="state$ | async as state" class="center-block-mobile">
+  <bio-card class="center-block-mobile">
     <h3 bioCardTitle>Forgot password</h3>
-    <bio-card-content *ngIf="state.emailSent; else email">
+    <bio-card-content *ngIf="emailSent; else email">
       <bio-confirmation-code-input
         controlName="code"
         (focusoutLastItem)="inputNewPassword.focus()"
         label="Confirmation code"
-        [codeError]="confirmCodeError$ | async"
+        [codeError]="confirmCodeError"
       ></bio-confirmation-code-input>
       <form-field label="New password">
         <input
@@ -37,8 +37,8 @@
     </ng-template>
 
     <bio-card-actions>
-      <button bioButton type="submit" primary [disabled]="emailForm.invalid" [loading]="state.loading">
-        {{ state.emailSent ? 'Change password' : 'Send confirmation code' }}
+      <button bioButton type="submit" primary [disabled]="emailForm.invalid" [loading]="loading">
+        {{ emailSent ? 'Change password' : 'Send confirmation code' }}
       </button>
     </bio-card-actions>
   </bio-card>
